Updated Part 2 of project

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -14,177 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "19b44aca-e479-4888-b2de-276063d3700e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>age</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>cp</th>\n",
-       "      <th>trestbps</th>\n",
-       "      <th>chol</th>\n",
-       "      <th>fbs</th>\n",
-       "      <th>restecg</th>\n",
-       "      <th>thalch</th>\n",
-       "      <th>exang</th>\n",
-       "      <th>oldpeak</th>\n",
-       "      <th>slope</th>\n",
-       "      <th>ca</th>\n",
-       "      <th>thal</th>\n",
-       "      <th>num</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>63</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Cleveland</td>\n",
-       "      <td>typical angina</td>\n",
-       "      <td>145.0</td>\n",
-       "      <td>233.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>lv hypertrophy</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>downsloping</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>fixed defect</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>67</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Cleveland</td>\n",
-       "      <td>asymptomatic</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>286.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>lv hypertrophy</td>\n",
-       "      <td>108.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>flat</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>67</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Cleveland</td>\n",
-       "      <td>asymptomatic</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>229.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>lv hypertrophy</td>\n",
-       "      <td>129.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>flat</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>reversable defect</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>37</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Cleveland</td>\n",
-       "      <td>non-anginal</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>187.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>downsloping</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>41</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Cleveland</td>\n",
-       "      <td>atypical angina</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>204.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>lv hypertrophy</td>\n",
-       "      <td>172.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>upsloping</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id  age     sex    dataset               cp  trestbps   chol    fbs  \\\n",
-       "0   1   63    Male  Cleveland   typical angina     145.0  233.0   True   \n",
-       "1   2   67    Male  Cleveland     asymptomatic     160.0  286.0  False   \n",
-       "2   3   67    Male  Cleveland     asymptomatic     120.0  229.0  False   \n",
-       "3   4   37    Male  Cleveland      non-anginal     130.0  250.0  False   \n",
-       "4   5   41  Female  Cleveland  atypical angina     130.0  204.0  False   \n",
-       "\n",
-       "          restecg  thalch  exang  oldpeak        slope   ca  \\\n",
-       "0  lv hypertrophy   150.0  False      2.3  downsloping  0.0   \n",
-       "1  lv hypertrophy   108.0   True      1.5         flat  3.0   \n",
-       "2  lv hypertrophy   129.0   True      2.6         flat  2.0   \n",
-       "3          normal   187.0  False      3.5  downsloping  0.0   \n",
-       "4  lv hypertrophy   172.0  False      1.4    upsloping  0.0   \n",
-       "\n",
-       "                thal  num  \n",
-       "0       fixed defect    0  \n",
-       "1             normal    2  \n",
-       "2  reversable defect    1  \n",
-       "3             normal    0  \n",
-       "4             normal    0  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Prints first 5 rows of our dataset\n",
     "df = pd.read_csv('heart_disease_uci.csv')\n",
@@ -1024,9 +857,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4daf5a8e-f3b2-4bd2-930a-ed95a702c0d7",
+   "metadata": {},
+   "source": [
+    "## Part 2: Data Dictionary (20 points)\n",
+    "\n",
+    "Complete the following data dictionary. For each column, you must:\n",
+    "1. **Research** the clinical meaning (these are standard cardiac assessment terms)\n",
+    "2. **Identify** the feature type (Continuous, Discrete, Categorical-Nominal, Categorical-Ordinal, Binary, Identifier)\n",
+    "3. **Document** the valid values/range you observe\n",
+    "4. **Note** any issues or questions\n",
+    "\n",
+    "| Column | Description | Feature Type | Valid Values/Range | Notes/Issues |\n",
+    "|--------|-------------|--------------|-------------------|--------------|\n",
+    "| `id` | Unique id for each patient | identifier | | |\n",
+    "| `age` | Age of the patient in years | discrete | 28 - 77 | |\n",
+    "| `sex` | Male/Female | categorical | categorical nominal | |\n",
+    "| `dataset` | location of data collection | categorical nominal | | |\n",
+    "| `cp` | chest pain type (typical angina, atypical angina, non-anginal, asymptomatic) | categorical nominal | | |\n",
+    "| `trestbps` | resting blood pressure (resting blood pressure (in mm Hg on admission to the hospital) | continuous | 0 - 200 | |\n",
+    "| `chol` | serum cholesterol in mg/dl | continuous | 0 - 603 | |\n",
+    "| `fbs` | if fasting blood sugar > 120 mg/dl | binary | | |\n",
+    "| `restecg` | resting electrocardiographic results. Values: (normal, stt abnormality, lv hypertrophy) | categorical nominal | | |\n",
+    "| `thalch` | maximum heart rate achieved | continuous| 60 - 202 | |\n",
+    "| `exang` | exercise-induced angina (True/ False) | binary | | |\n",
+    "| `oldpeak` | ST depression induced by exercise relative to rest | continuous | -2.6 - 6.2 | |\n",
+    "| `slope` | the slope of the peak exercise ST segment | categorical nominal | | high amounts of null vals |\n",
+    "| `ca` | number of major vessels (0-3) colored by fluoroscopy | discrete | 0 - 3 | high amounts of null vals |\n",
+    "| `thal` | [normal; fixed defect; reversible defect] | categorical nominal | | high amounts of null vals |\n",
+    "| `num` | the predicted attribute | discrete | 0 - 4 | |\n",
+    "### Clinical Research Questions for Version B\n",
+    "\n",
+    "Answer these questions based on your research (you may need to use Google):\n",
+    "\n",
+    "**1. What is hypertension? According to current American Heart Association guidelines, what are the blood pressure thresholds for normal, elevated, Stage 1 hypertension, and Stage 2 hypertension?**\n",
+    "\n",
+    "Your answer: Hypertension, also known as high blood pressure is when the force of your blood pressing against your arteries is too high. Hypertension can lead to heart issues, strokes heart disease, and various other medical issues. Normal blood pressure is considered to be when systolic mm Hg is less than 120 and diastolic mm Hg is less than 80. Elevated blood pressure is when systolic mm Hg is between 120-129 and diastolic mm Hg is less than 80. Stage 1 hypertension is when systolic mm Hg is between 130-139 and diastolic mm Hg is between 80-89. Stage 2 hypertension is when systolic mm Hg is 140 or higher and diastolic mm Hg is higher than 90.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**2. What is resting ECG (restecg)? What do \"normal,\" \"ST-T abnormality,\" and \"left ventricular hypertrophy\" findings indicate about heart health?**\n",
+    "\n",
+    "Your answer: Resting ECG (restecg) is a resting 12 lead cardiography test that detects abnormalities such as arrhythmias, coronary heart disease, and other conditions. An ECG takes a snapshot of the electrical activity of your heart. A normal finding means that the timing and strength of a heart falls within the normal range, while this is a good finding it doesn't rule out all heart conditions. ST-T abnormalities are when there is a change in the ST segment and the T wave, with the heart muscle resetting in between beats. The most common causes for this are Ischemia where the heart isn't getting enough oxygen/blood due to clogged arteries, electrolyte imbalances due to calcium and potassium, or medication side effects. Left Ventricular Hypertrophy/LVH is when the muscle wall of the main pumping chamber/left ventricle becomes thicker/enlarged. The causes of this are most commonly high blood pressure where the increased pressure makes the heart have to work harder to pump blood causing the muscle to become larger, valve issues where blood is harder to squeeze through and move, and athletes heart where increased physical activity can cause the heart to become stronger due to long term endurance training (marathon runners). These ECG findings are all indicators that can help us determine what conditions patients may be facing. \n",
+    "\n",
+    "---\n",
+    "\n",
+    "**3. What is fasting blood sugar (fbs)? Why is the threshold of 120 mg/dl clinically significant? What does elevated fasting blood sugar indicate about diabetes risk?**\n",
+    "\n",
+    "Your answer: Fasting blood sugar is a test where patient's blood sugar is measured after they haven't consumed anything other than water for 8-12 hours. A normal range is considered to be less than 100 mg/dl, Prediabetes 100-125mg/dl, and Diabetes is considered to be 126 mg/dl. 120 mg/dl places a patient very firmly in the range of prediabetes, with symptoms most likely arising already. Elevated fasting blood sugar while not diabetes yet already causes damage to the body with the lining of blood vessels, neuropathy, retinopathy, kidney damage, and loss of beta cells already possibly occuring within the body. \n",
+    "\n",
+    "---\n",
+    "\n",
+    "**4. What does the number of major vessels colored by fluoroscopy (ca) tell us? Why might having more blocked vessels indicate worse heart disease?**\n",
+    "\n",
+    "Your answer:\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdac54fd-6155-4f4b-a9f7-1b651a43e669",
+   "id": "ae4285f7-dbfd-44f7-8fc6-a4a01837e6b3",
    "metadata": {},
    "outputs": [],
    "source": []
