More filling out of questions

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "b320b749-5fe7-477a-b5d5-3d2867faf746",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in c:\\users\\elite\\i320d_bm\\venv\\lib\\site-packages (3.0.0)\n",
-      "Requirement already satisfied: numpy in c:\\users\\elite\\i320d_bm\\venv\\lib\\site-packages (2.4.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\elite\\i320d_bm\\venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: tzdata in c:\\users\\elite\\i320d_bm\\venv\\lib\\site-packages (from pandas) (2025.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\elite\\i320d_bm\\venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -25,6 +13,18 @@
       "\n",
       "[notice] A new release of pip is available: 24.2 -> 26.0.1\n",
       "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\users\\elite\\venv\\lib\\site-packages (3.0.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\elite\\venv\\lib\\site-packages (2.4.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\elite\\venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: tzdata in c:\\users\\elite\\venv\\lib\\site-packages (from pandas) (2025.3)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\elite\\venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "19b44aca-e479-4888-b2de-276063d3700e",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "4             normal    0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "72f84ce6-e7cd-4755-89f4-618876332d48",
    "metadata": {
     "scrolled": true
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "530d8d67-8821-4706-a9c1-28572835c8df",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "58530ea1-8292-4c09-8a6a-0f160fbf0c06",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "331f5006-7ca5-4601-9c00-c09b4ca36fd2",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "4             normal    0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "7d9071d7-fb4d-4603-b1ad-36388eb3dc7e",
    "metadata": {},
    "outputs": [
@@ -678,7 +678,7 @@
        "919    lv hypertrophy    93.0   True      0.0   NaN NaN           NaN    1  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "91578705-1aa7-4005-b251-b19fd3878d68",
    "metadata": {},
    "outputs": [
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "ebf95969-3330-4057-b758-011ebe7a7861",
    "metadata": {},
    "outputs": [
@@ -744,23 +744,23 @@
      "output_type": "stream",
      "text": [
       "Missing Values by Column:\n",
-      "id            0\n",
-      "age           0\n",
-      "sex           0\n",
-      "dataset       0\n",
-      "cp            0\n",
-      "trestbps     59\n",
-      "chol         30\n",
-      "fbs          90\n",
-      "restecg       2\n",
-      "thalch       55\n",
-      "exang        55\n",
-      "oldpeak      62\n",
-      "slope       309\n",
-      "ca          611\n",
-      "thal        486\n",
-      "num           0\n",
-      "dtype: int64\n",
+      "          Missing Values  Percentage (%)\n",
+      "id                     0            0.00\n",
+      "age                    0            0.00\n",
+      "sex                    0            0.00\n",
+      "dataset                0            0.00\n",
+      "cp                     0            0.00\n",
+      "trestbps              59            6.41\n",
+      "chol                  30            3.26\n",
+      "fbs                   90            9.78\n",
+      "restecg                2            0.22\n",
+      "thalch                55            5.98\n",
+      "exang                 55            5.98\n",
+      "oldpeak               62            6.74\n",
+      "slope                309           33.59\n",
+      "ca                   611           66.41\n",
+      "thal                 486           52.83\n",
+      "num                    0            0.00\n",
       "\n",
       "==================================================\n",
       " Total Missing Values: 1759\n",
@@ -771,13 +771,27 @@
    "source": [
     "# Point 7 - Missing Values\n",
     "print(\"Missing Values by Column:\")\n",
+    "\n",
+    "# Calculate raw counts and percentages\n",
     "missing = df.isnull().sum()\n",
-    "print(missing)\n",
+    "missing_pct = (missing / len(df)) * 100\n",
+    "\n",
+    "# Combine them into a single summary table\n",
+    "missing_summary = pd.DataFrame({\n",
+    "    'Missing Values': missing,\n",
+    "    'Percentage (%)': missing_pct\n",
+    "})\n",
+    "\n",
+    "# Display the table, rounding percentages to 2 decimal places for cleanliness\n",
+    "print(missing_summary.round(2))\n",
     "\n",
     "print(\"\\n\" + \"=\"*50)\n",
+    "\n",
+    "# Calculate total missing values\n",
     "total_missing = missing.sum()\n",
     "print(f\" Total Missing Values: {total_missing}\")\n",
     "\n",
+    "# Check condition\n",
     "if total_missing == 0:\n",
     "    print(\"Great! No missing values - complete dataset!\")\n",
     "else:\n",
@@ -786,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "2ae30ea7-6e13-4821-b492-4327d5598ba0",
    "metadata": {},
    "outputs": [
@@ -814,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "00e93798-9e58-4bb3-b09a-33b3dc9dd2bf",
    "metadata": {},
    "outputs": [
@@ -961,7 +975,7 @@
        "num       920.0    0.995652    1.142693   0.0    0.00    1.0    2.00    4.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "1c6c1bb7-d1d6-4044-b5c5-6d22a66419db",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "12c1a0eb-ed88-46db-b027-3a41fd2e7be9",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "2b4bbe4a-59d0-45c6-89c4-be7d68688963",
    "metadata": {},
    "outputs": [
@@ -1186,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "2e14b065-62f5-4f71-8948-f629c9f6f650",
    "metadata": {},
    "outputs": [
