Final touches on assignment

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -1269,6 +1269,338 @@
     "- What would happen if you calculated the mean cholesterol without handling this?\n",
     "- "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "24979819-172c-4f48-9e20-edf041fb6419",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Patient Counts by Source ---\n",
+      "dataset\n",
+      "Cleveland        304\n",
+      "Hungary          293\n",
+      "VA Long Beach    200\n",
+      "Switzerland      123\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Smallest contributor: Switzerland (123 patients)\n",
+      "\n",
+      "--- Missing Data Percentages by Source (%) ---\n",
+      "                id  age  sex   cp  trestbps  chol    fbs  restecg  thalch  \\\n",
+      "dataset                                                                     \n",
+      "Cleveland      0.0  0.0  0.0  0.0      0.00  0.00   0.00     0.00    0.00   \n",
+      "Hungary        0.0  0.0  0.0  0.0      0.34  7.85   2.73     0.34    0.34   \n",
+      "Switzerland    0.0  0.0  0.0  0.0      1.63  0.00  60.98     0.81    0.81   \n",
+      "VA Long Beach  0.0  0.0  0.0  0.0     28.00  3.50   3.50     0.00   26.50   \n",
+      "\n",
+      "               exang  oldpeak  slope     ca   thal  num  \n",
+      "dataset                                                  \n",
+      "Cleveland       0.00     0.00   0.33   1.64   0.99  0.0  \n",
+      "Hungary         0.34     0.00  64.51  98.98  90.44  0.0  \n",
+      "Switzerland     0.81     4.88  13.82  95.93  42.28  0.0  \n",
+      "VA Long Beach  26.50    28.00  51.00  99.00  83.00  0.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Section 3 - 3.3\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv('heart_disease_uci.csv')\n",
+    "\n",
+    "# 1. Count patients from each source\n",
+    "print(\"--- Patient Counts by Source ---\")\n",
+    "source_counts = df['dataset'].value_counts()\n",
+    "print(source_counts)\n",
+    "\n",
+    "# Identify the smallest contributor\n",
+    "fewest_source = source_counts.idxmin()\n",
+    "fewest_count = source_counts.min()\n",
+    "print(f\"\\nSmallest contributor: {fewest_source} ({fewest_count} patients)\")\n",
+    "\n",
+    "# 2. Check missing data patterns by source (Calculated as Percentages)\n",
+    "print(\"\\n--- Missing Data Percentages by Source (%) ---\")\n",
+    "missing_pct_by_source = df.groupby('dataset').apply(lambda x: x.isnull().mean() * 100).round(2)\n",
+    "print(missing_pct_by_source)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c5a36a25-a377-49bf-8f7b-8ce190016a24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bp_category\n",
+      "Stage 2 HTN        311\n",
+      "Elevated           211\n",
+      "Stage 1 HTN        177\n",
+      "Normal             161\n",
+      "Missing/Invalid     60\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Part 4\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# 1. Load the dataset\n",
+    "df = pd.read_csv('heart_disease_uci.csv')\n",
+    "\n",
+    "# 2. Define the exact conditions based on the AHA guidelines\n",
+    "conditions = [\n",
+    "    # Missing or 0\n",
+    "    df['trestbps'].isna() | (df['trestbps'] == 0),\n",
+    "    # Normal: < 120\n",
+    "    df['trestbps'] < 120,\n",
+    "    # Elevated: 120-129\n",
+    "    (df['trestbps'] >= 120) & (df['trestbps'] < 130),\n",
+    "    # Stage 1 HTN: 130-139\n",
+    "    (df['trestbps'] >= 130) & (df['trestbps'] < 140),\n",
+    "    # Stage 2 HTN: >= 140\n",
+    "    df['trestbps'] >= 140\n",
+    "]\n",
+    "\n",
+    "# 3. Define the corresponding categories\n",
+    "choices = [\n",
+    "    'Missing/Invalid',\n",
+    "    'Normal',\n",
+    "    'Elevated',\n",
+    "    'Stage 1 HTN',\n",
+    "    'Stage 2 HTN'\n",
+    "]\n",
+    "\n",
+    "# 4. Apply the conditions to create the new column\n",
+    "df['bp_category'] = np.select(conditions, choices, default='Unknown')\n",
+    "\n",
+    "# 5. Check the distribution\n",
+    "print(df['bp_category'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4e01a9a-747b-49bc-b80e-dfafc0978240",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df['bp_category'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7761a37a-a17a-4fa3-8a9f-fbedef038597",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Blood Pressure Categories Distribution ---\n",
+      "bp_category\n",
+      "Stage 2 HTN        311\n",
+      "Elevated           211\n",
+      "Stage 1 HTN        177\n",
+      "Normal             161\n",
+      "Missing/Invalid     60\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "--- Percentage of Patients with Heart Disease by BP Category ---\n",
+      "bp_category\n",
+      "Normal         54.04%\n",
+      "Elevated       49.29%\n",
+      "Stage 1 HTN    48.59%\n",
+      "Stage 2 HTN    61.74%\n",
+      "Name: has_disease, dtype: str\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# --- STEP 1: CREATE THE CATEGORIES ---\n",
+    "\n",
+    "# 1. Load the dataset\n",
+    "df = pd.read_csv('heart_disease_uci.csv')\n",
+    "\n",
+    "# 2. Define the exact conditions based on the AHA guidelines\n",
+    "conditions = [\n",
+    "    # Missing or 0\n",
+    "    df['trestbps'].isna() | (df['trestbps'] == 0),\n",
+    "    # Normal: < 120\n",
+    "    df['trestbps'] < 120,\n",
+    "    # Elevated: 120-129\n",
+    "    (df['trestbps'] >= 120) & (df['trestbps'] < 130),\n",
+    "    # Stage 1 HTN: 130-139\n",
+    "    (df['trestbps'] >= 130) & (df['trestbps'] < 140),\n",
+    "    # Stage 2 HTN: >= 140\n",
+    "    df['trestbps'] >= 140\n",
+    "]\n",
+    "\n",
+    "# 3. Define the corresponding categories\n",
+    "choices = [\n",
+    "    'Missing/Invalid',\n",
+    "    'Normal',\n",
+    "    'Elevated',\n",
+    "    'Stage 1 HTN',\n",
+    "    'Stage 2 HTN'\n",
+    "]\n",
+    "\n",
+    "# 4. Apply the conditions to create the new column\n",
+    "df['bp_category'] = np.select(conditions, choices, default='Unknown')\n",
+    "\n",
+    "# 5. Check the distribution\n",
+    "print(\"--- Blood Pressure Categories Distribution ---\")\n",
+    "print(df['bp_category'].value_counts())\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "\n",
+    "# --- STEP 2: CALCULATE DISEASE RATES ---\n",
+    "# (Notice we DO NOT reload the CSV here, we just keep using 'df')\n",
+    "\n",
+    "# 1. Create a binary indicator for heart disease (1 = disease, 0 = no disease)\n",
+    "df['has_disease'] = (df['num'] > 0).astype(int)\n",
+    "\n",
+    "# 2. Exclude the \"Missing/Invalid\" category\n",
+    "valid_bp_df = df[df['bp_category'] != 'Missing/Invalid']\n",
+    "\n",
+    "# 3. Calculate the percentage of patients with heart disease in each BP category\n",
+    "disease_rates = valid_bp_df.groupby('bp_category')['has_disease'].mean() * 100\n",
+    "\n",
+    "# 4. Reorder the categories logically for interpretation\n",
+    "category_order = ['Normal', 'Elevated', 'Stage 1 HTN', 'Stage 2 HTN']\n",
+    "disease_rates = disease_rates.reindex(category_order)\n",
+    "\n",
+    "print(\"--- Percentage of Patients with Heart Disease by BP Category ---\")\n",
+    "print(disease_rates.round(2).astype(str) + '%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "829766aa-51fe-4d1a-a0fc-0b8d3295213e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Cholesterol by Heart Disease Status:\n",
+      "has_disease\n",
+      "0    240.16\n",
+      "1    254.01\n",
+      "Name: chol, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# 1. Load the dataset\n",
+    "df = pd.read_csv('heart_disease_uci.csv')\n",
+    "\n",
+    "# 2. Handle invalid cholesterol values of 0 (replace with NaN)\n",
+    "df['chol'] = df['chol'].replace(0, np.nan)\n",
+    "\n",
+    "# 3. Create a binary heart disease indicator (1 = Disease, 0 = No Disease)\n",
+    "df['has_disease'] = (df['num'] > 0).astype(int)\n",
+    "\n",
+    "# 4. Perform the groupby analysis\n",
+    "avg_chol = df.groupby('has_disease')['chol'].mean()\n",
+    "\n",
+    "print(\"Average Cholesterol by Heart Disease Status:\")\n",
+    "print(avg_chol.round(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5041c320-70c9-4a05-98cc-5701c201edee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Distribution of 'num' (0-4 Severity) ---\n",
+      "     Count  Percentage (%)\n",
+      "num                       \n",
+      "0      411           44.67\n",
+      "1      265           28.80\n",
+      "2      109           11.85\n",
+      "3      107           11.63\n",
+      "4       28            3.04\n",
+      "\n",
+      "==================================================\n",
+      "\n",
+      "--- Distribution of Binary Disease Indicator ---\n",
+      "                     Count  Percentage (%)\n",
+      "0 (No Disease)         411           44.67\n",
+      "1 (Disease Present)    509           55.33\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv('heart_disease_uci.csv')\n",
+    "\n",
+    "# 1. Distribution of the original 'num' column (Severity 0-4)\n",
+    "print(\"--- Distribution of 'num' (0-4 Severity) ---\")\n",
+    "num_counts = df['num'].value_counts().sort_index()\n",
+    "num_percentages = (df['num'].value_counts(normalize=True) * 100).sort_index()\n",
+    "\n",
+    "num_dist = pd.DataFrame({\n",
+    "    'Count': num_counts,\n",
+    "    'Percentage (%)': num_percentages.round(2)\n",
+    "})\n",
+    "print(num_dist)\n",
+    "\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
+    "\n",
+    "\n",
+    "# 2. Create a binary version (0 = no disease, 1 = disease present)\n",
+    "df['disease_binary'] = (df['num'] > 0).astype(int)\n",
+    "\n",
+    "# Show its distribution\n",
+    "print(\"--- Distribution of Binary Disease Indicator ---\")\n",
+    "binary_counts = df['disease_binary'].value_counts().sort_index()\n",
+    "binary_percentages = (df['disease_binary'].value_counts(normalize=True) * 100).sort_index()\n",
+    "\n",
+    "binary_dist = pd.DataFrame({\n",
+    "    'Count': binary_counts,\n",
+    "    'Percentage (%)': binary_percentages.round(2)\n",
+    "})\n",
+    "binary_dist.index = ['0 (No Disease)', '1 (Disease Present)']\n",
+    "print(binary_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6e6828c-5e8c-4740-b353-230ad15c6722",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
