Final labeling across notebook and main markdown

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -36,10 +36,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "id": "19b44aca-e479-4888-b2de-276063d3700e",
    "metadata": {},
+   "source": [
+    "# Part 1 - 10 Point Inspection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d01d3706-3973-4c5f-b6d4-9fbd98312975",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1123,6 +1133,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b27c16f2-bc1d-43f2-b2b3-d66d7f5052c2",
+   "metadata": {},
+   "source": [
+    "**Part 3 Data Validation**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "2b4bbe4a-59d0-45c6-89c4-be7d68688963",
@@ -1195,7 +1213,8 @@
    "id": "2d6a08ef-e3c2-48d5-9dfb-650f206b9718",
    "metadata": {},
    "source": [
-    "Cholesterol"
+    "**Part 3\n",
+    "3.2 - Cholesterol**"
    ]
   },
   {
@@ -1257,17 +1276,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e818703b-6077-4a19-a296-3aad9d424ba8",
+   "id": "f57ba862-9708-417a-b52a-d15f75f80645",
    "metadata": {},
    "source": [
-    "- Did you find any cholesterol values of 0?\n",
-    "There were 172 cholesterol values of 0 and 30 null values, giving us 202 instances of missing cholesterol.\n",
-    "- Is a cholesterol level of 0 clinically possible?\n",
-    "A cholesterol level of 0 is not clinically possible unless through very very rare circumstances with genetic disorders occurring.\n",
-    "- How many such impossible values exist?\n",
-    "The impossible values that exist within our dataset for cholesterol are the 172 values of 0 and then 4 records that have chol levels over 500.\n",
-    "- What would happen if you calculated the mean cholesterol without handling this?\n",
-    "- "
+    "**Part 3\n",
+    "3.3 - Multi source data validation**"
    ]
   },
   {
@@ -1329,6 +1342,14 @@
     "print(\"\\n--- Missing Data Percentages by Source (%) ---\")\n",
     "missing_pct_by_source = df.groupby('dataset').apply(lambda x: x.isnull().mean() * 100).round(2)\n",
     "print(missing_pct_by_source)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4d0b86e-d2e6-40b3-919e-3f8dcc14b941",
+   "metadata": {},
+   "source": [
+    "**Part 4 - Clinical Blood Pressure Groups**"
    ]
   },
   {
@@ -1398,6 +1419,14 @@
    "outputs": [],
    "source": [
     "print(df['bp_category'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6e6828c-5e8c-4740-b353-230ad15c6722",
+   "metadata": {},
+   "source": [
+    "**Part 5.3 - Grouping Analysis**"
    ]
   },
   {
@@ -1492,6 +1521,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ae9d238-03ca-4c79-aed3-df6a24380678",
+   "metadata": {},
+   "source": [
+    "**Part 5.3 - Grouping Analysis**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "829766aa-51fe-4d1a-a0fc-0b8d3295213e",
@@ -1527,6 +1564,14 @@
     "\n",
     "print(\"Average Cholesterol by Heart Disease Status:\")\n",
     "print(avg_chol.round(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d31b3893-ae4f-44f6-ae39-55b6ce1e0337",
+   "metadata": {},
+   "source": [
+    "**Part 6 - Target Variable Analysis**"
    ]
   },
   {
@@ -1593,14 +1638,6 @@
     "binary_dist.index = ['0 (No Disease)', '1 (Disease Present)']\n",
     "print(binary_dist)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6e6828c-5e8c-4740-b353-230ad15c6722",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
